--- a/src/styles/modules/header.less
+++ b/src/styles/modules/header.less
@@ -9,6 +9,7 @@
   top: 0;
   width: 100%;
   z-index: @header-z-index;
+  pointer-events: none;
 
   .at-medium({
     margin-top: 25px;
@@ -139,6 +140,7 @@
   position: fixed;
   top: 20px;
   left: 50%;
+  pointer-events: auto;
 
   .at-medium({
     margin: 0 auto;
